--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     
     <organization>
         <!-- Used as the 'Vendor' for JNLP generation -->
-        <name>jtb</name>
+        <name>jtbgroup</name>
     </organization>
 
     <properties>
@@ -20,17 +20,13 @@
     </properties>
 
     <build>
-
         <finalName>documentmover</finalName>
-
         <plugins>
-
             <plugin>
                 <groupId>com.zenjava</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>2.0</version>
                 <configuration>
-
                     <mainClass>be.vds.documentmover.MainApp</mainClass>
 
                     <!-- only required if signing the jar file -->
@@ -40,23 +36,11 @@
 
                 </configuration>
             </plugin>
-
         </plugins>
     </build>
 
-
     <dependencies>
-    
-        <!-- MigLayout -->
-
-        <dependency>
-            <groupId>com.miglayout</groupId>
-            <artifactId>miglayout-javafx</artifactId>
-            <version>4.2</version>
-        </dependency>
-
         <!-- Apache Commons -->
-
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
@@ -64,7 +48,6 @@
         </dependency>
 
         <!-- Logging  -->
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -85,7 +68,5 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
-
     </dependencies>
-
 </project>
