--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<dependency>
 			<groupId>org.jpedal</groupId>
 			<artifactId>OpenViewerFX</artifactId>
+<!-- 			<version>6.24</version> -->
 			<version>7.7.25</version>
 		</dependency>
 
