--- a/pom.xml
+++ b/pom.xml
@@ -74,8 +74,14 @@
 		<dependency>
 			<groupId>org.jpedal</groupId>
 			<artifactId>OpenViewerFX</artifactId>
-<!-- 			<version>6.24</version> -->
+			<!-- <version>6.24</version> -->
 			<version>7.7.25</version>
+		</dependency>
+
+		<dependency>
+			<groupId>np.com.ngopal</groupId>
+			<artifactId>javafx-autocomplete-field</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
 	</dependencies>
